fix: add min-height to component wrapper to avoid overlapping with other section

--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -12,7 +12,7 @@
   padding: 10vh 15vh;
   padding-bottom: 0;
   position: relative;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .homeGreeting {
